--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.5",
+    "date-fns": "^3.6.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.5",
     "vue": "^3.4.29"
