--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@primevue/themes": "^4.0.5",
     "date-fns": "^3.6.0",
+    "pinia": "^2.2.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.5",
     "vue": "^3.4.29"
